# VeriFlowCC

./: .gitignore  .gitleaks.toml  .gitmodules  .markdown-link-check.json  .mcp.example.json  .pre-commit-config.yaml  ARTIFACT_MANAGEMENT.md  CLAUDE.md  ORCHESTRATION.md  PYTHON_GUIDELINES.md  README.md  coverage.json  pyproject.toml  pytest-sequential.ini  pytest.ini  ruff.toml  test_files_catalog.md
.agilevv/: backlog.md  state.json  state.json.template  ux_design.md
.agilevv/c4/diagrams/: component.md  container.md  context.md
.agilevv/product/: decisions.md  roadmap.md  tech-stack.md
.agilevv/recaps/: 2025-08-19-real-testing-migration.md  2025-08-20-real-testing-migration.md
.agilevv/requirements/: README.md  STORY-001.json  STORY-050.json
.agilevv/specs/2025-08-12-agent-system-completion/: spec-lite.md  spec.md  tasks.md
.agilevv/specs/2025-08-12-test-isolation-agilevv/: spec-lite.md  spec.md
.agilevv/specs/2025-08-13-sdk-testing-validation/: spec-lite.md  spec.md  tasks.md
.agilevv/specs/2025-08-14-claude-code-hooks/: spec-lite.md  spec.md  tasks.md
.agilevv/specs/2025-08-14-fake-project-integration/: spec-lite.md  spec.md  tasks.md
.agilevv/specs/2025-08-14-optional-api-key/: spec-lite.md  spec.md  tasks.md
.agilevv/specs/2025-08-14-story-map-integration/: spec-lite.md  spec.md  tasks.md
.agilevv/specs/2025-08-18-mailbuddy-integration-testing/: spec-lite.md  spec.md  task-5-completion-report.md  tasks.md
.agilevv/specs/2025-08-19-real-testing-migration/: TASK4_IMPLEMENTATION.md  (+4 more)
.agilevv/standards/: code-style.md  git-best-practices.md  tech-stack.md
.claude/: code_policy.json  file_policy.json  git_policy.json  mock_policy.json  status_line_config.json
.claude/agents/: 3-acceptance-validator.md  3-unit-test-writer.md  code-reviewer.md  coder-architect.md  context-fetcher.md  date-checker.md  debugger.md  file-creator.md  git-workflow.md  human-code-review-architect.md  implementer.md  lint-type-fixer.md  meta-agent.md  planner.md  precommit-error-analyzer.md  project-manager.md  qa-testing-architect.md  security-auditor.md  standards-analyzer.md  system-checker.md  test-runner.md  testing-architect.md
.claude/commands/: pre-commit.md
.claude/hooks/: bash_commands.json  install_hooks.sh
.claude/product/: README.md  decisions.md  roadmap.md
.claude/standards/: best-practices.md  code-style.md  tech-stack.md
.serena/: project.yml
.serena/memories/: codebase_structure.md  coding_standards.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
.vv/: config.yaml
docs/: API_DOCUMENTATION.md  CLI_USAGE.md  EXAMPLES.md  INTEGRATION_REPORT.md  PYTHON_GUIDELINES.md  REAL_TESTING_GUIDE.md  TEST_DATA_MANAGEMENT.md  TROUBLESHOOTING.md  tech-stack.md
docs/AgileVV/: AgileVV.md
docs/adr/: 001-state-management.md  002-hook-integration.md  003-helper-agents.md  004-memory-hierarchy.md  ADR-000-why-verifflowcc.md
docs/diagrams/: c4-component.mmd  c4-container.mmd  c4-context.mmd
docs/roadmap/: FeatureToBePlanned.md  ROADMAP.md  Sprint-0.5-Foundation.md  Sprint-0_Planning-Design.md  Sprint-1-WorkflowEnforcement.md  Sprint-1_Planner_MVE.md  Sprint-2_Coding_Agent_MVE.md  Sprint-3_Testing_Agent_and_Fix_Loop.md
sprints/template/: VV_DECISIONS.md
tests/: __init__.py  conftest.py  test_cli.py  test_cli_authentication_disclaimer.py  test_conftest.py  test_examples.py  test_integration.py  test_isolation_meta.py  test_real_cli_integration.py
tests/agents/: __init__.py  test_agent_factory.py  test_ai_generated_task_validation.py  test_architect.py  test_architect.py.bak10  test_architect.py.bak13  test_architect.py.bak9  test_basic_sdk_response_validation.py  test_developer.py  test_developer.py.bak3  test_developer.py.bak7  test_integration.py  test_integration_enhanced.py  test_pydantic_schema_validation.py  test_qa_tester.py  test_real_architect_sdk.py  test_real_developer_sdk.py  test_real_integration_sdk.py  test_real_qa_tester_sdk.py  test_real_requirements_analyst_sdk.py  test_real_sdk_code_generation.py  test_requirements_analyst.py  test_session_management.py  test_streaming_interruption.py  test_streaming_response.py  test_streaming_timeout_retry.py  test_structured_output_parsing.py
tests/core/: test_error_handling_standardization.py  test_path_config.py  test_real_sdk_config_integration.py  test_sdk_config.py
tests/integration/: test_authentication_error_handling.py  test_authentication_integration.py  test_concurrent_session_isolation.py  test_document_based_session_storage.py  test_e2e_error_handling.py  test_e2e_real_sdk_streaming.py  test_e2e_real_sdk_vmodel_workflow.py  test_e2e_session_persistence.py  test_e2e_vmodel_workflow.py  test_e2e_vmodel_workflow_handoffs.py  test_e2e_vmodel_workflow_part2.py  test_e2e_vmodel_workflow_verification.py  test_mailbuddy_vmodel_integration.py  test_multi_agent_coordination.py  test_orchestrator_integration.py  test_path_config_integration.py  test_real_authentication_integration.py  test_real_claude_code_sdk_requirements.py  test_real_orchestrator_integration.py  test_sdk_integration.py  test_vmodel_session_context.py
tests/performance/: test_sdk_performance.py
tests/schemas/: __init__.py  test_agent_schemas.py  test_agent_schemas.py.bak  test_agent_schemas.py.bak2  test_agent_template.py
tests/test_schemas/: test_plan.py  test_test_report.py  test_validation.py
tests/validation/: test_documentation_validation.py  test_mock_removal_validation.py
verifflowcc/: __init__.py  cli.py
verifflowcc/agents/: __init__.py  architect.py  base.py  developer.py  factory.py  integration.py  qa_tester.py  requirements_analyst.py
verifflowcc/core/: __init__.py  git_integration.py  orchestrator.py  path_config.py  sdk_config.py  vmodel.py
verifflowcc/prompts/: __init__.py  architect.j2  coding.jinja2  design.jinja2  integration.j2  planner.jinja2  testing.jinja2  validation.jinja2
verifflowcc/schemas/: __init__.py  agent_schemas.py  plan.py  task.py  template_schemas.py  test_report.py  validation.py
verifflowcc/templates/: base_agent_template.j2
(+397 files in other folders)
