[project]
name = "verifflowcc"
version = "0.1.0"
description = "Verification Flow Command Center - AI-driven V-Model development pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VeriFlowCC Team", email = "team@verifflowcc.ai"}
]
dependencies = [
    "anthropic>=0.25.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "jinja2>=3.1.3",
    "gitpython>=3.1.40",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12",
    "types-jinja2>=2.11.9",
]

[project.scripts]
verifflowcc = "verifflowcc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12",
    "types-jinja2>=2.11.9",
]

# Ruff configuration moved to ruff.toml to avoid validate-pyproject schema issues
# See: https://github.com/astral-sh/ruff/issues/11880

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -v --cov=verifflowcc --cov-report=term-missing"
asyncio_mode = "auto"
