[project]
name = "verifflowcc"
version = "0.1.0"
description = "Verification Flow Command Center - AI-driven V-Model development pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VeriFlowCC Team", email = "team@verifflowcc.ai"}
]
dependencies = [
    "anthropic>=0.25.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "jinja2>=3.1.3",
    "gitpython>=3.1.40",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12",
    "types-jinja2>=2.11.9",
]

[project.scripts]
verifflowcc = "verifflowcc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12",
    "types-jinja2>=2.11.9",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["verifflowcc", "tests"]
exclude = [".claude"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific rules
]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"verifflowcc/cli.py" = ["B008"]  # Allow function calls in defaults (Typer pattern)
"verifflowcc/prompts/__init__.py" = ["S701"]  # Not rendering HTML, autoescape not needed

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
exclude = [".claude"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -v --cov=verifflowcc --cov-report=term-missing"
asyncio_mode = "auto"
